[project]
name = "langgraph-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grandalf>=0.8",
    "graphviz>=0.20.3",
    "langgraph>=0.3.31",
    "langgraph-gen>=0.0.6",
    "nest-asyncio>=1.6.0",
    "openai>=1.75.0",
    "pydot>=3.0.4",
    "pygraphviz>=1.14",
    "pyppeteer>=0.0.25",
]
