[project]
name = "langgraph-maker"
version = "0.1.0"
description = "LangGraph를 이용한 그래프 시각화 도구입니다"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grandalf>=0.8",
    "graphviz>=0.20.3",
    "ipython>=8.36.0",
    "langgraph>=0.3.31",
    "langgraph-gen>=0.0.6",
    "nest-asyncio>=1.6.0",
    "openai>=1.75.0",
    "pydot>=3.0.4",
    "pygraphviz>=1.14",
    "pyppeteer>=0.0.25",
]
